# EduExamples

./: .gitignore  CMakeLists.txt  CMakeSettings.json  global.cmake  qtglobal.cmake
PlotExample/: CMakeLists.txt  Resource.qrc  main.cpp
PlotExample/include/: BoundDistanceInterface.h  ChartModel.h  ChartRecord.h  ChartWindow.h  DefaultBoundDistance.h  ExperimentalBoundDistance.h  MainWindow.h
PlotExample/src/: ChartModel.cpp  ChartRecord.cpp  ChartWindow.cpp  MainWindow.cpp
PlotExample/ui/: ChartWindow.ui  MainWindow.ui
headers/: exit_input.h  input_interface.h  scoped_input.h
src/: main.cpp
